@@ -1,17 +1,17 @@
 package com.meepleconnect.boardgamesapi.services;
 
-import com.meepleconnect.boardgamesapi.exceptions.ConflictException;
-import com.meepleconnect.boardgamesapi.exceptions.GameNotFoundException;
-import com.meepleconnect.boardgamesapi.exceptions.TeapotException;
 import com.meepleconnect.boardgamesapi.models.Boardgame;
 import com.meepleconnect.boardgamesapi.repositories.BoardgameRepository;
+import com.meepleconnect.boardgamesapi.exceptions.GameNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.test.context.ActiveProfiles;
 
 import java.math.BigDecimal;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -19,6 +19,7 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
+@ActiveProfiles("test")
 class BoardgameServiceTest {
 
     @Mock
@@ -32,109 +33,101 @@ class BoardgameServiceTest {
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
-        testGame = new Boardgame("Catan", new BigDecimal("39.99"), 2, true, 3, 4, "Strategy", null);
+        testGame = new Boardgame("Catan", new BigDecimal("39.99"), true, 2, 4, "Strategy", null);
+        testGame.setId(1L); // Verwijder reflectie en gebruik setter
     }
 
     @Test
-    void getAllBoardgames_ShouldReturnList() {
-        when(boardgameRepository.findAll()).thenReturn(List.of(testGame));
+    void getAllBoardgames_ShouldReturnAll() {
+        Boardgame game1 = new Boardgame("Terraforming Mars", new BigDecimal("59.99"), true, 1, 5, "Strategy", null);
+        Boardgame game2 = new Boardgame("Gloomhaven", new BigDecimal("89.99"), true, 1, 4, "Adventure", null);
+
+        when(boardgameRepository.findAll()).thenReturn(Arrays.asList(game1, game2));
 
         List<Boardgame> result = boardgameService.getAllBoardgames();
 
-        assertEquals(1, result.size());
-        assertEquals("Catan", result.get(0).getName());
+        assertEquals(2, result.size());
+        verify(boardgameRepository, times(1)).findAll();
     }
 
     @Test
-    void getBoardgamesByGenre_ShouldReturnList() {
-        when(boardgameRepository.findByGenreIgnoreCase("Strategy")).thenReturn(List.of(testGame));
-
-        List<Boardgame> result = boardgameService.getBoardgamesByGenre("Strategy");
-
-        assertEquals(1, result.size());
-        assertEquals("Catan", result.get(0).getName());
-    }
-
-    @Test
-    void getBoardgameById_ExistingId_ShouldReturnGame() {
+    void getBoardgameById_ShouldReturnBoardgame() {
         when(boardgameRepository.findById(1L)).thenReturn(Optional.of(testGame));
 
         Boardgame result = boardgameService.getBoardgameById(1L);
 
         assertNotNull(result);
         assertEquals("Catan", result.getName());
+        verify(boardgameRepository, times(1)).findById(1L);
     }
 
     @Test
-    void getBoardgameById_NonExistingId_ShouldThrowException() {
-        when(boardgameRepository.findById(99L)).thenReturn(Optional.empty());
+    void getBoardgameById_NotFound_ShouldThrowException() {
+        when(boardgameRepository.findById(999L)).thenReturn(Optional.empty());
 
-        assertThrows(GameNotFoundException.class, () -> boardgameService.getBoardgameById(99L));
+        GameNotFoundException exception = assertThrows(GameNotFoundException.class, () -> {
+            boardgameService.getBoardgameById(999L);
+        });
+
+        assertEquals("Bordspel met ID 999 niet gevonden.", exception.getMessage());
+        verify(boardgameRepository, times(1)).findById(999L);
     }
 
     @Test
-    void addBoardgame_NewGame_ShouldSaveAndReturn() {
-        when(boardgameRepository.findByNameIgnoreCase("Catan")).thenReturn(Optional.empty());
-        when(boardgameRepository.save(any(Boardgame.class))).thenReturn(testGame);
+    void addBoardgame_ShouldSaveBoardgame() {
+        Boardgame newGame = new Boardgame("Terraforming Mars", new BigDecimal("59.99"), true, 1, 5, "Strategy", null);
 
-        Boardgame result = boardgameService.addBoardgame(testGame);
+        when(boardgameRepository.save(any(Boardgame.class))).thenReturn(newGame);
+
+        Boardgame result = boardgameService.addBoardgame(newGame);
 
         assertNotNull(result);
-        assertEquals("Catan", result.getName());
+        assertEquals("Terraforming Mars", result.getName());
+        verify(boardgameRepository, times(1)).save(newGame);
     }
 
     @Test
-    void addBoardgame_DuplicateName_ShouldThrowException() {
-        when(boardgameRepository.findByNameIgnoreCase("Catan")).thenReturn(Optional.of(testGame));
-
-        assertThrows(ConflictException.class, () -> boardgameService.addBoardgame(testGame));
-    }
-
-    @Test
-    void updateBoardgame_ExistingId_ShouldUpdateGame() {
-        Boardgame updatedGame = new Boardgame("Updated Catan", new BigDecimal("49.99"), 3, true, 2, 5, "Adventure", null);
-
-        when(boardgameRepository.findById(1L)).thenReturn(Optional.of(testGame));
+    void updateBoardgame_ShouldUpdateExisting() {
+        Boardgame existingGame = new Boardgame("Catan", new BigDecimal("39.99"), true, 2, 4, "Strategy", null);
+        existingGame.setId(1L);
+    
+        Boardgame updatedGame = new Boardgame("Updated Catan", new BigDecimal("49.99"), true, 2, 5, "Adventure", null);
+        updatedGame.setId(1L);
+    
+        when(boardgameRepository.findById(1L)).thenReturn(Optional.of(existingGame));
         when(boardgameRepository.save(any(Boardgame.class))).thenReturn(updatedGame);
-
+    
         Boardgame result = boardgameService.updateBoardgame(1L, updatedGame);
-
+    
         assertNotNull(result);
         assertEquals("Updated Catan", result.getName());
+        verify(boardgameRepository, times(1)).save(any(Boardgame.class));
+    }
+    
+
+    @Test
+    void updateBoardgame_NotFound_ShouldThrowException() {
+        Boardgame updatedGame = new Boardgame("Updated Catan", new BigDecimal("49.99"), true, 2, 5, "Adventure", null);
+
+        when(boardgameRepository.findById(999L)).thenReturn(Optional.empty());
+
+        GameNotFoundException exception = assertThrows(GameNotFoundException.class, () -> {
+            boardgameService.updateBoardgame(999L, updatedGame);
+        });
+
+        assertEquals("Bordspel met ID 999 niet gevonden.", exception.getMessage());
+        verify(boardgameRepository, times(1)).findById(999L);
     }
 
     @Test
-    void updateBoardgame_NonExistingId_ShouldThrowException() {
-        when(boardgameRepository.findById(99L)).thenReturn(Optional.empty());
-
-        Boardgame updatedGame = new Boardgame("Updated Catan", new BigDecimal("49.99"), 3, true, 2, 5, "Adventure", null);
-
-        assertThrows(GameNotFoundException.class, () -> boardgameService.updateBoardgame(99L, updatedGame));
+    void deleteBoardgame_NotFound_ShouldThrowException() {
+        when(boardgameRepository.existsById(999L)).thenReturn(false); // Gebruik existsById
+    
+        GameNotFoundException exception = assertThrows(GameNotFoundException.class, () -> {
+            boardgameService.deleteBoardgame(999L);
+        });
+    
+        assertEquals("Bordspel met ID 999 niet gevonden.", exception.getMessage());
+        verify(boardgameRepository, times(1)).existsById(999L); // Verifieer existsById
     }
-
-    @Test
-    void deleteBoardgame_ExistingId_ShouldDeleteGame() {
-        when(boardgameRepository.existsById(1L)).thenReturn(true);
-        doNothing().when(boardgameRepository).deleteById(1L);
-
-        assertDoesNotThrow(() -> boardgameService.deleteBoardgame(1L));
-    }
-
-    @Test
-    void deleteBoardgame_NonExistingId_ShouldThrowException() {
-        when(boardgameRepository.existsById(99L)).thenReturn(false);
-
-        assertThrows(GameNotFoundException.class, () -> boardgameService.deleteBoardgame(99L));
-    }
-    @Test
-    void getSpecialBoardgame_ShouldThrowTeapotException() {
-        BoardgameService boardgameService = new BoardgameService(boardgameRepository);
-
-        TeapotException exception = assertThrows(TeapotException.class, () -> {
-        boardgameService.getSpecialBoardgame(418);
-    });
-
-    assertEquals("Dit bordspel is een theepot!", exception.getMessage());
-}
-
 }
